Fix broken styles, update template, hide error on reset (#2)

--- a/extension/src/styles/styles.css
+++ b/extension/src/styles/styles.css
@@ -1,29 +1,21 @@
-#search .frame {
-  display: flex;
+
+#pr-form {
+  flex-grow: 0.5;
 }
 
-@media (max-width: 920px) {
-  #search .frame {
-    flex-wrap: wrap;
+@media (max-width: 768px) {
+  #pr-form {
+    flex-basis: 100%;
   }
 }
 
-#search .frame form {
-  flex-grow: 2;
-}
-
-#pr-form {
-  flex-grow: 1;
-}
-
-.pr-wrapper {
-  flex-wrap: wrap;
-}
-
 .pr-error {
-  color: #ff4500;
-  display: none;
+  color: #B58900;
   font-size: 12px;
-  margin: 5px 0;
-  width: 100%;
+  line-height: 36px;
+  margin-left: 5px;
+}
+
+.pr-hide {
+  display: none;
 }
